# RayTracingOneWeekend

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build.ninja
src/: main.cpp
src/camera/: camera.h
src/color/: color.h
src/hit/: hit.h  hittable_list.h  sphere.h
src/material/: dielectric.h  lambertian.h  material.h  metal.h
src/random/: rtrandom.h
src/ray/: ray.h
src/vector/: vector3.h
